--- a/sites/index.html
+++ b/sites/index.html
@@ -104,10 +104,11 @@
           </nav>
 
           <!-- Tema -->
-          <label class="flex items-center gap-3 mt-6 cursor-pointer">
-            <input type="checkbox" id="themeToggle" class="theme-switch" />
-            <span id="themeText" class="font-semibold text-lightAccent dark:text-darkAccent select-none">Alterar Tema</span>
-          </label>
+         <label class="flex items-center gap-3 mt-6 cursor-pointer">
+  <input type="checkbox" id="themeToggle" class="l" />
+  <span id="themeText" class="font-semibold text-lightAccent dark:text-darkAccent select-none">Modo Claro</span>
+</label>
+
         </div>
 
         <footer class="text-sm text-gray-500 dark:text-gray-400">© 2025 PROJETO INTEGRADOR INS</footer>
