site quase finalizado

--- a/sites/login.html
+++ b/sites/login.html
@@ -6,6 +6,8 @@
   <title>Login</title>
   <link rel="stylesheet" href="css/login.css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="assets/icon.png" type="image/png" />
+
 </head>
 <body>
   <div class="background-gradient"></div>
