--- a/sites/register.html
+++ b/sites/register.html
@@ -6,6 +6,8 @@
   <title>Registo</title>
   <link rel="stylesheet" href="css/register.css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="assets/icon.png" type="image/png" />
+
 </head>
 <body>
   <div class="background-gradient"></div>
