--- a/sites/index.html
+++ b/sites/index.html
@@ -18,8 +18,84 @@
 
     <!-- Estilos externos -->
     <link rel="stylesheet" href="css/theme-switch.css" />
-    <link rel="stylesheet" href="css/botao-remover.css" />
     <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="css/auth-buttons.css" />
+
+   <style>
+  .super-button {
+    width: 56px;
+    height: 56px;
+    background: linear-gradient(135deg, #ef4444, #b91c1c);
+    border: none;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
+    box-shadow: 0 8px 20px rgba(239, 68, 68, 0.4);
+    transition: transform 0.2s ease, box-shadow 0.3s ease;
+    overflow: hidden;
+  }
+
+  .super-button:hover {
+    transform: scale(1.1) rotate(3deg);
+    box-shadow: 0 12px 25px rgba(239, 68, 68, 0.5);
+  }
+
+  .super-button .icon {
+    width: 24px;
+    height: 24px;
+    stroke: white;
+    stroke-width: 2.5;
+    fill: none;
+    transition: transform 0.3s ease;
+  }
+
+  .super-button:hover .icon {
+    transform: scale(1.2) rotate(90deg);
+  }
+
+  .super-button::before {
+    content: "";
+    position: absolute;
+    width: 300%;
+    height: 300%;
+    background: radial-gradient(circle, rgba(255, 255, 255, 0.2) 10%, transparent 10.01%);
+    background-repeat: no-repeat;
+    background-position: 50%;
+    transform: scale(0);
+    opacity: 0;
+    transition: transform 0.5s, opacity 1s;
+    border-radius: 50%;
+    z-index: 1;
+  }
+
+  .super-button:active::before {
+    transform: scale(1);
+    opacity: 1;
+    transition: 0s;
+  }
+
+  .super-button.delete {
+    animation: explodeAndFade 0.6s ease forwards;
+  }
+
+  @keyframes explodeAndFade {
+    0% {
+      transform: scale(1) rotate(0);
+      opacity: 1;
+    }
+    60% {
+      transform: scale(1.3) rotate(180deg);
+    }
+    100% {
+      transform: scale(0) rotate(720deg);
+      opacity: 0;
+    }
+  }
+</style>
+
 
     <!-- Tailwind Config -->
     <script>
@@ -62,10 +138,11 @@
   <body class="bg-lightBg text-lightText font-sans dark:bg-darkBg dark:text-darkText transition-colors duration-500">
     <!-- Header -->
     <header class="bg-lightCard dark:bg-darkCard px-6 py-4 flex justify-between items-center border-b border-lightHighlight dark:border-darkHighlight fixed w-full z-20">
-      <div class="flex items-center gap-3">
-        <i class="fas fa-file-pdf text-lightAccent dark:text-darkAccent text-2xl"></i>
-        <h1 class="text-2xl font-semibold tracking-tight">PROJETO INTEGRADOR INS</h1>
-      </div>
+     <div class="flex items-center gap-3">
+  <img src="assets/icon.png" alt="Ícone PDF" class="w-8 h-8" />
+  <h1 class="text-2xl font-semibold tracking-tight">PROJETO INTEGRADOR INS</h1>
+</div>
+
 
       <div class="flex items-center gap-4">
   <input
@@ -77,17 +154,20 @@
 
 
   <div id="authButtons" class="flex gap-3">
-    <a href="login.html" class="text-blue-500 hover:underline font-medium">Login</a>
-    <a href="register.html" class="text-blue-500 hover:underline font-medium">Registo</a>
-  </div>
+  <a href="login.html" class="auth-btn">
+    <span><i class="fas fa-sign-in-alt mr-2"></i> Login</span>
+  </a>
 
-  <button
-    id="logoutBtn"
-    onclick="logout()"
-    class="hidden text-red-500 hover:underline font-medium"
-  >
-    Sair
-  </button>
+  <a href="register.html" class="auth-btn">
+    <span><i class="fas fa-user-plus mr-2"></i> Registo</span>
+  </a>
+</div>
+
+
+  <button id="logoutBtn" onclick="logout()" class="auth-btn logout-btn hidden">
+  <span><i class="fas fa-sign-out-alt mr-2"></i> Sair</span>
+</button>
+
 </div>
 
     </header>
@@ -243,5 +323,21 @@
     <script src="js/nav.js"></script>
     <script src="js/pdfHandler.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/auth.js"></script>
+
+    <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const dropzone = document.getElementById("dropzone");
+    const fileInput = document.getElementById("pdfInput");
+
+    dropzone.addEventListener("click", () => {
+      fileInput.click();
+    });
+
+    // Adicional (cursor de pointer ao passar por cima da dropzone)
+    dropzone.style.cursor = "pointer";
+  });
+</script>
+
   </body>
 </html>
